--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html, body, main {
+html, body {
 	height: 100%;
 	font-family: sans-serif;
 }
@@ -20,19 +20,23 @@ body {
 .label.active {
 	background: lightblue;
 }
-main {
+main, aside {
 	display: flex;
 	flex-direction: column;
 	height: 100%;
+}
+main {
 	width: 800px;
 }
 h1 {
 	display: inline;
 	vertical-align: middle;
-	margin-right: 1em;
+	font-size: 1.8em;
+	margin-bottom: 0;
+	margin-top: 0.5em;
 }
-.form {
-	margin-top: 1em;
+form {
+	margin: 0.5em 0;
 }
 .result {
 	display: block;
