--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@ body {
 	justify-content: center;
 }
 #labels {
-	margin-right: 1em;
 	overflow: auto;
 	min-width: 250px;
 	max-width: 250px;
+	border-top: 1px solid #ccc;
 }
 .label {
 	padding: 0.2em 0.3em;
@@ -28,12 +28,18 @@ main, aside {
 main {
 	width: 800px;
 }
+aside {
+	margin-right: 1em;
+}
 h1 {
-	display: inline;
-	vertical-align: middle;
 	font-size: 1.8em;
-	margin-bottom: 0;
-	margin-top: 0.5em;
+	margin: 0.3em 0;
+}
+.info {
+	padding-bottom: 0.3em;
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
 }
 form {
 	margin: 0.5em 0;
