allow selecting multiple labels by holding shift

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 	min-width: 250px;
 	max-width: 250px;
 	border-top: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
 	user-select: none;
 }
 .label {
@@ -72,4 +73,7 @@ form {
 }
 .result:hover {
 	background: #f5f5f5;
+}
+#hint {
+	padding: 0.3em;
 }
