--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ form {
     border: 1px solid #ccc;
     box-shadow: 5px 5px 10px #ccc;
 }
-.result:hover {
+.result:hover, .label:not(.active):hover {
 	background: #f5f5f5;
 }
 #hint {
