--- a/style.css
+++ b/style.css
@@ -82,10 +82,11 @@ header {
 	cursor: pointer;
 	user-select: none;
 	text-align: center;
+	border: 1px solid transparent;
+	border-bottom: 0;
 }
 .tab.active {
-	border: 1px solid #ccc;
-	border-bottom: 0;
+	border-color: #ccc;
 	background: #f5f5f5;
 }
 nav {
