--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ nav form {
 	margin-right: 1em;
 }
 @media (max-width: 1000px) {
-	header, nav, .form, .labels {
+	header, nav, .form, #labels {
 		padding: 0 1em;
 	}
 	.result {
