--- a/style.css
+++ b/style.css
@@ -22,6 +22,15 @@ h1 {
 	margin: 0.3em 0;
 	margin-right: 0.5em;
 }
+h2 {
+	font-size: inherit;
+	position: sticky;
+	top: 0;
+	margin-top: 0;
+	font-weight: normal;
+	background: #eee;
+	padding: 0.1em;
+}
 header {
 	display: flex;
 	align-items: center;
@@ -58,7 +67,7 @@ header {
 	word-break: break-word;
 }
 #results {
-	padding: 0.2em 1em;
+	padding: 0em 1em;
 	overflow: auto;
 }
 #search {
