--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h2 {
 	font-size: inherit;
 	position: sticky;
 	top: 0;
-	margin-top: 0;
+	margin: 0;
 	font-weight: normal;
 	background: #eee;
 	padding: 0.1em;
