--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ header {
 #repoInput {
 	font-weight: bold;
 }
-#labels {
+#labelPopover {
 	overflow-y: auto;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -79,7 +79,7 @@ header {
 	cursor: pointer;
 	user-select: none;
 }
-#labels .label {
+#labelPopover .label {
 	padding: 0.2em;
 }
 #labelPills .label {
